view self shoppre done

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".UI.SignupLogin.ResetPassword"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/main">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -62,7 +63,8 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginHorizontal="39dp"
-
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/hint_color"
                 android:layout_marginTop="6dp"
                 app:boxBackgroundColor="@color/box_background_color"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -81,12 +83,37 @@
                     android:hint="@string/new_password_string"
                     android:padding="10dp"
                     android:singleLine="true"
-                    android:textColor="@color/hint_color"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
-
+            <TextView
+                android:id="@+id/newPasswordError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="left"
+                android:text="@string/password_error_message"
+                android:textColor="@color/design_default_color_error"
+                android:textFontWeight="500"
+                android:textSize="10sp"
+                android:visibility="gone" />
+            <TextView
+                android:id="@+id/helperText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="start"
+                android:letterSpacing="0.03"
+                android:text="@string/helper_text"
+                android:textColor="@color/hint_color"
+                android:textFontWeight="500"
+                android:textSize="10sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -100,13 +127,13 @@
             <com.google.android.material.textfield.TextInputLayout
 
 
-                android:id="@+id/confirmNewPassword"
+                android:id="@+id/confirmTIL"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginHorizontal="39dp"
-
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/hint_color"
                 android:layout_marginTop="6dp"
                 app:boxBackgroundColor="@color/box_background_color"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -125,12 +152,25 @@
                     android:hint="@string/confirm_new_password_string"
                     android:padding="10dp"
                     android:singleLine="true"
-                    android:textColor="@color/hint_color"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
-
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/confirmError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="left"
+                android:text="* Password does not match"
+                android:textColor="@color/design_default_color_error"
+                android:textFontWeight="500"
+                android:textSize="10sp"
+                />
             <Button
                 android:id="@+id/resetPassword"
                 android:layout_width="match_parent"
