--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".UI.SignupLogin.ResetPassword"
-    android:background="@color/white">
+    android:id="@+id/main"
+    tools:context=".UI.SignupLogin.ResetPassword">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -54,9 +55,7 @@
                 android:textSize="12sp" />
 
             <com.google.android.material.textfield.TextInputLayout
-
-
-                android:id="@+id/newPassword"
+                android:id="@+id/currentPassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -81,11 +80,25 @@
                     android:hint="Current Password"
                     android:padding="10dp"
                     android:singleLine="true"
-                    android:textColor="@color/hint_color"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/currentPasswordError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="left"
+                android:text="* This is a required field"
+                android:textColor="@color/design_default_color_error"
+                android:textFontWeight="500"
+                android:textSize="10sp"
+                android:visibility="gone" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -99,14 +112,11 @@
 
             <com.google.android.material.textfield.TextInputLayout
 
-
-                android:id="@+id/confirmNewPassword"
+                android:id="@+id/newPassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginHorizontal="39dp"
-
                 android:layout_marginTop="6dp"
                 app:boxBackgroundColor="@color/box_background_color"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -117,7 +127,9 @@
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
                 app:hintAnimationEnabled="false"
-                app:hintEnabled="false">
+                app:hintEnabled="false"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/hint_color">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -125,11 +137,39 @@
                     android:hint="@string/new_password_string"
                     android:padding="10dp"
                     android:singleLine="true"
-                    android:textColor="@color/hint_color"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/newPasswordError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="left"
+                android:text="@string/password_error_message"
+                android:textColor="@color/design_default_color_error"
+                android:textFontWeight="500"
+                android:textSize="10sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/helperText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="start"
+                android:letterSpacing="0.03"
+                android:text="@string/helper_text"
+                android:textColor="@color/hint_color"
+                android:textFontWeight="500"
+                android:textSize="10sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -142,15 +182,11 @@
                 android:textSize="12sp" />
 
             <com.google.android.material.textfield.TextInputLayout
-
-
-                android:id="@+id/confirmNewPassword"
+                android:id="@+id/confirmTIL"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginHorizontal="39dp"
-
                 android:layout_marginTop="6dp"
                 app:boxBackgroundColor="@color/box_background_color"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -161,7 +197,9 @@
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
                 app:hintAnimationEnabled="false"
-                app:hintEnabled="false">
+                app:hintEnabled="false"
+                app:endIconMode="password_toggle"
+                app:endIconTint="@color/hint_color">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -169,17 +207,31 @@
                     android:hint="Re-enter New Password"
                     android:padding="10dp"
                     android:singleLine="true"
-                    android:textColor="@color/hint_color"
+                    android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/confirmError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="38dp"
+                android:gravity="left"
+                android:text="* Password does not match"
+                android:textColor="@color/design_default_color_error"
+                android:textFontWeight="500"
+                android:textSize="10sp"
+                />
+
             <Button
-                android:id="@+id/resetPassword"
+                android:id="@+id/changePasswordBtn"
                 android:layout_width="match_parent"
                 android:layout_height="38dp"
-                android:textColor="@color/white"
                 android:layout_marginHorizontal="82dp"
                 android:layout_marginTop="22dp"
                 android:layout_marginBottom="54dp"
@@ -189,6 +241,7 @@
                 android:letterSpacing="0.03"
                 android:text="Change Password"
                 android:textAllCaps="false"
+                android:textColor="@color/white"
                 android:textFontWeight="600"
                 android:textSize="14sp"
                 app:cornerRadius="5dp"
