--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,218 +2,216 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".UI.SignupLogin.LoginActivity"
-    android:id="@+id/main">
+    tools:context=".UI.SignupLogin.LoginActivity">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/login_shoppre_logo"
+            android:layout_width="164dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="77dp"
+            android:src="@drawable/shopprelogo" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login_google_btn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="68dp"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="#F3F6F9"
+            android:fontFamily="@font/montserrat"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:letterSpacing="0.03"
+            android:text="Login with Google"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:elevation="4dp"
+            app:icon="@drawable/ic_google"
+            app:iconSize="24dp"
+            app:iconTint="@null" />
 
-            <ImageView
-                android:id="@+id/login_shoppre_logo"
-                android:layout_width="164dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="77dp"
-                android:src="@drawable/shopprelogo" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_google_btn"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="#F3F6F9"
-        android:fontFamily="@font/montserrat"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="Login with Google"
-        android:textAllCaps="false"
-        android:letterSpacing="0.03"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:elevation="4dp"
-        app:icon="@drawable/ic_google"
-        app:iconSize="24dp"
-        app:iconTint="@null" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_fb_logo"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#F3F6F9"
-        android:letterSpacing="0.03"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:paddingLeft="19dp"
-        android:text="Login with Facebook"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:elevation="4dp"
-        app:icon="@drawable/ic_fb"
-        app:iconSize="24dp"
-        app:iconTint="@null" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="25dp">
-
-                <TextView
-                    android:id="@+id/or"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginBottom="1dp"
-                    android:text="OR"
-                    android:textColor="#000000" />
-
-        <View
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/login_fb_logo"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="68dp"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="#F3F6F9"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:letterSpacing="0.03"
+            android:paddingLeft="19dp"
+            android:text="Login with Facebook"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:elevation="4dp"
+            app:icon="@drawable/ic_fb"
+            app:iconSize="24dp"
+            app:iconTint="@null" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="39dp"
-            android:layout_toLeftOf="@id/or"
-            android:background="#000000" />
+            android:layout_marginTop="25dp">
 
-        <View
+            <TextView
+                android:id="@+id/or"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="1dp"
+                android:text="OR"
+                android:textColor="#000000" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="39dp"
+                android:layout_toLeftOf="@id/or"
+                android:background="#000000" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="39dp"
+                android:layout_toRightOf="@id/or"
+                android:background="#000000" />
+
+        </RelativeLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailIdField"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginRight="38dp"
+            app:boxBackgroundColor="#F3F6F9"
+            app:boxCornerRadiusBottomEnd="5dp"
+            app:boxCornerRadiusBottomStart="5dp"
+            app:boxCornerRadiusTopEnd="5dp"
+            app:boxCornerRadiusTopStart="5dp"
+            app:boxStrokeColor="#F3F6F9"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:hintAnimationEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Email ID"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#AFADAD"
+                android:textSize="12sp"
+                app:boxStrokeColor="#F3F6F9" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordField"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginRight="38dp"
+            app:boxBackgroundColor="#F3F6F9"
+            app:boxCornerRadiusBottomEnd="5dp"
+            app:boxCornerRadiusBottomStart="5dp"
+            app:boxCornerRadiusTopEnd="5dp"
+            app:boxCornerRadiusTopStart="5dp"
+            app:boxStrokeColor="#F3F6F9"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/hint_color"
+
+            app:hintAnimationEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="10dp"
+
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#AFADAD"
+                android:textSize="12sp"
+                app:boxStrokeColor="#F3F6F9" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/forgot_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
             android:layout_marginRight="39dp"
-            android:layout_toRightOf="@id/or"
-            android:background="#000000" />
+            android:gravity="right"
+            android:text="Forgot Password"
+            android:textColor="#AFADAD" />
 
-    </RelativeLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailIdField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginRight="38dp"
-        app:boxBackgroundColor="#F3F6F9"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="#F3F6F9"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Email ID"
-            android:inputType="textEmailAddress"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="#AFADAD"
-            android:textSize="12sp"
-            app:boxStrokeColor="#F3F6F9" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="82dp"
+            android:layout_marginTop="28dp"
+            android:backgroundTint="#2D8DFF"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="Login"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textFontWeight="700"
+            android:textSize="14sp"
+            app:cornerRadius="5dp"
+            app:elevation="4dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginRight="38dp"
-        app:boxBackgroundColor="#F3F6F9"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="#F3F6F9"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
+        <TextView
+            android:id="@+id/dont_have_acnt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="26dp"
+            android:paddingBottom="30dp"
+            android:text="@string/dont_have"
+            android:textSize="12sp" />
 
-        app:endIconMode="password_toggle"
-        app:endIconTint="@color/hint_color">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="#AFADAD"
-            android:textSize="12sp"
-            app:boxStrokeColor="#F3F6F9" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginRight="39dp"
-        android:gravity="right"
-        android:text="Forgot Password"
-        android:textColor="#AFADAD" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginBtn"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginHorizontal="82dp"
-        android:layout_marginTop="28dp"
-        android:backgroundTint="#2D8DFF"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="Login"
-        android:textSize="14sp"
-        android:textAllCaps="false"
-        android:textFontWeight="700"
-        app:cornerRadius="5dp"
-        app:elevation="4dp"
-        android:textColor="@color/white"/>
-
-    <TextView
-        android:id="@+id/dont_have_acnt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dont_have"
-        android:textSize="12sp"
-        android:layout_marginTop="26dp"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="30dp"/>
-
-        </LinearLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
