--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,174 +2,170 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".UI.SignupLogin.SignUpActivity"
     android:background="@color/white"
-    android:id="@+id/main">
+    android:orientation="vertical"
+    tools:context=".UI.SignupLogin.SignUpActivity">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
+        <ImageView
+            android:id="@+id/signup_shoppre_logo"
+            android:layout_width="164dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="77dp"
+            android:src="@drawable/shopprelogo" />
 
-        <LinearLayout
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/signup_google_btn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="68dp"
+            android:layout_marginTop="80dp"
+            android:backgroundTint="#F3F6F9"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:letterSpacing="0.03"
+            android:text="Sign Up with Google"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:elevation="4dp"
+            app:icon="@drawable/ic_google"
+            app:iconSize="24dp"
+            app:iconTint="@null" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/signup_fb_btn"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="68dp"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="#F3F6F9"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:letterSpacing="0.03"
+            android:text="Sign Up with Facebook"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:textFontWeight="500"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:elevation="4dp"
+            app:icon="@drawable/ic_fb"
+            app:iconSize="24dp"
+            app:iconTint="@null" />
 
-            <ImageView
-                android:id="@+id/signup_shoppre_logo"
-                android:layout_width="164dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="77dp"
-                android:src="@drawable/shopprelogo" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/signup_google_btn"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:layout_marginHorizontal="68dp"
-                android:layout_marginTop="80dp"
-                android:backgroundTint="#F3F6F9"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:letterSpacing="0.03"
-                android:text="Sign Up with Google"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textFontWeight="500"
-                android:textSize="12sp"
-                app:cornerRadius="8dp"
-                app:elevation="4dp"
-                app:icon="@drawable/ic_google"
-                app:iconSize="24dp"
-                app:iconTint="@null" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/signup_fb_btn"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:layout_marginHorizontal="68dp"
-                android:layout_marginTop="32dp"
-                android:backgroundTint="#F3F6F9"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:letterSpacing="0.03"
-                android:text="Sign Up with Facebook"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textFontWeight="500"
-                android:textSize="12sp"
-                app:cornerRadius="8dp"
-                app:elevation="4dp"
-                app:icon="@drawable/ic_fb"
-                app:iconSize="24dp"
-                app:iconTint="@null" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="42dp">
-
-                <TextView
-                    android:id="@+id/or"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginRight="3dp"
-                    android:layout_marginBottom="1dp"
-                    android:text="OR"
-                    android:textColor="#000000" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="39dp"
-                    android:layout_toLeftOf="@id/or"
-                    android:background="#000000" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="39dp"
-                    android:layout_toRightOf="@id/or"
-                    android:background="#000000" />
-
-            </RelativeLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/emailIdField"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginRight="38dp"
-                app:boxBackgroundColor="#F3F6F9"
-                app:boxCornerRadiusBottomEnd="5dp"
-                app:boxCornerRadiusBottomStart="5dp"
-                app:boxCornerRadiusTopEnd="5dp"
-                app:boxCornerRadiusTopStart="5dp"
-                app:boxStrokeColor="#F3F6F9"
-                app:boxStrokeWidth="0dp"
-                app:boxStrokeWidthFocused="0dp"
-                app:hintAnimationEnabled="false"
-                app:hintEnabled="false">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Email ID"
-                    android:inputType="textEmailAddress"
-                    android:padding="10dp"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textColorHint="#AFADAD"
-                    android:textSize="12sp"
-                    app:boxStrokeColor="#F3F6F9" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/get_started_btn"
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:textSize="14sp"
-                android:layout_marginHorizontal="82dp"
-                android:layout_marginTop="44dp"
-                android:backgroundTint="#2D8DFF"
-                android:text="Get Started!"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textFontWeight="700"
-                app:cornerRadius="5dp"
-                app:elevation="4dp"
-                android:letterSpacing="0.03"
-                />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="42dp">
 
             <TextView
-                android:id="@+id/signup_already_acnt"
+                android:id="@+id/or"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="28dp"
-                android:text="@string/alreay_have"
-                android:textSize="12sp"
-                android:paddingBottom="22dp"/>
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginBottom="1dp"
+                android:text="OR"
+                android:textColor="#000000" />
 
-        </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="39dp"
+                android:layout_toLeftOf="@id/or"
+                android:background="#000000" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="39dp"
+                android:layout_toRightOf="@id/or"
+                android:background="#000000" />
+
+        </RelativeLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/emailIdField"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginRight="38dp"
+            app:boxBackgroundColor="#F3F6F9"
+            app:boxCornerRadiusBottomEnd="5dp"
+            app:boxCornerRadiusBottomStart="5dp"
+            app:boxCornerRadiusTopEnd="5dp"
+            app:boxCornerRadiusTopStart="5dp"
+            app:boxStrokeColor="#F3F6F9"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
+            app:hintAnimationEnabled="false"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email ID"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="#AFADAD"
+                android:textSize="12sp"
+                app:boxStrokeColor="#F3F6F9" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/get_started_btn"
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:layout_marginHorizontal="82dp"
+            android:layout_marginTop="44dp"
+            android:backgroundTint="#2D8DFF"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:letterSpacing="0.03"
+            android:text="Get Started!"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textFontWeight="700"
+            android:textSize="14sp"
+            app:cornerRadius="5dp"
+            app:elevation="4dp" />
+
+        <TextView
+            android:id="@+id/signup_already_acnt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="28dp"
+            android:paddingBottom="22dp"
+            android:text="@string/alreay_have"
+            android:textSize="12sp" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
