--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -11,6 +11,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+        <ImageView
+            android:padding="30dp"
+            android:visibility="gone"
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginHorizontal="14dp"
+            android:layout_marginVertical="34dp"
+            android:src="@drawable/shopprelogo"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/orderDetailsRecycler"
 
