--- a/app/src/main/res/layout/fragment_payment_summary.xml
+++ b/app/src/main/res/layout/fragment_payment_summary.xml
@@ -1426,7 +1426,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="12dp"
                             android:layout_marginTop="18dp"
-                            android:text="Service Charges Summary"
+                            android:text="Final Shipping Charges"
                             android:textColor="@color/black"
                             android:textFontWeight="700"
                             android:textSize="14sp" />
@@ -1578,6 +1578,7 @@
                                 android:background="#D2D2D2" />
 
                             <TextView
+                                android:id="@+id/shippingLevelChargeTitle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
@@ -1602,6 +1603,7 @@
 
 
                         <LinearLayout
+                            android:id="@+id/membershipSavingLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="12dp"
@@ -1628,6 +1630,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/membershipChild1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="12dp">
@@ -1645,12 +1648,23 @@
                                 android:background="#D2D2D2" />
 
                             <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginTop="4dp"
+                                android:layout_weight="1"
+                                android:text="Shipping Charge Discount (5%)"
+                                android:textColor="#676767"
+                                android:textFontWeight="400"
+                                android:textSize="10sp" />
+
+                            <TextView
                                 android:id="@+id/tvShippingChargeDiscount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
                                 android:layout_marginTop="4dp"
-                                android:text="Shipping Charge Discount (5%)"
+                                android:text=""
                                 android:textColor="#676767"
                                 android:textFontWeight="400"
                                 android:textSize="10sp" />
@@ -1660,6 +1674,7 @@
 
 
                         <LinearLayout
+                            android:id="@+id/membershipChild2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="12dp">
@@ -1681,7 +1696,19 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
                                 android:layout_marginTop="4dp"
+                                android:layout_weight="1"
                                 android:text="Service Charge Discount"
+                                android:textColor="#676767"
+                                android:textFontWeight="400"
+                                android:textSize="10sp" />
+
+                            <TextView
+                                android:id="@+id/tvServiceChargeDiscount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="4dp"
+                                android:layout_marginTop="4dp"
+                                android:text=""
                                 android:textColor="#676767"
                                 android:textFontWeight="400"
                                 android:textSize="10sp" />
