--- a/app/src/main/res/layout/upload_invoice_dialog_box.xml
+++ b/app/src/main/res/layout/upload_invoice_dialog_box.xml
@@ -21,10 +21,20 @@
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp">
 
+        <ImageView
+            android:id="@+id/closeBtn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/cross"
+            android:layout_gravity="right"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="15dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
 
             <TextView
                 android:layout_width="wrap_content"
