view self shoppre done

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -86,6 +86,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
+                    android:inputType="textPassword"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
             <TextView
@@ -155,6 +156,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
+                    android:inputType="textPassword"
                     app:boxStrokeColor="@color/box_background_color" />
             </com.google.android.material.textfield.TextInputLayout>
             <TextView
