--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -138,6 +138,7 @@
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
+                    android:inputType="textPassword"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
@@ -208,6 +209,7 @@
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@color/black"
+                    android:inputType="textPassword"
                     android:textColorHint="@color/hint_color"
                     android:textSize="12sp"
                     app:boxStrokeColor="@color/box_background_color" />
