--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -269,7 +269,8 @@
                             android:id="@+id/orderRecyclerView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="29dp">
+                            android:layout_marginTop="29dp"
+                            >
 
                         </androidx.recyclerview.widget.RecyclerView>
 
