--- a/app/src/main/res/layout/fragment_shipping_calculator_result.xml
+++ b/app/src/main/res/layout/fragment_shipping_calculator_result.xml
@@ -526,6 +526,7 @@
                             android:textColor="@color/black"
                             android:textSize="10sp" />
                         <LinearLayout
+                            android:id="@+id/restricted"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp"
