--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -8,189 +8,190 @@
     tools:context=".UI.Orders.OrderFragments.ViewOrderPersonalShop">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="21dp"
+            android:layout_marginTop="23dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <androidx.cardview.widget.CardView
+                <LinearLayout
+                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="21dp"
-                    android:layout_marginTop="23dp"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="4dp">
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/singleOrderImage"
+                        android:layout_width="39dp"
+                        android:layout_height="39dp"
+                        android:layout_marginVertical="31dp"
+                        android:layout_marginLeft="12dp"
+                        android:src="@drawable/ic_personal_shopper" />
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center_vertical"
-                        android:gravity="center_vertical">
+                        android:layout_marginLeft="10dp"
+                        android:orientation="vertical">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/singleOrderImage"
-                            android:layout_width="39dp"
-                            android:layout_height="39dp"
-                            android:layout_marginVertical="31dp"
-                            android:layout_marginLeft="18dp"
-                            android:src="@drawable/ic_personal_shopper" />
-
-                        <LinearLayout
+                        <TextView
+                            android:id="@+id/websiteName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="15dp"
-                            android:orientation="vertical">
+                            android:text=""
+                            android:textColor="@color/black"
+                            android:textFontWeight="700"
+                            android:textSize="14sp" />
 
-                            <TextView
-                                android:id="@+id/websiteName"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text=""
-                                android:textColor="@color/black"
-                                android:textFontWeight="700"
-                                android:textSize="14sp" />
+                        <TextView
+                            android:gravity="center"
+                            android:id="@+id/status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
+                            android:background="@drawable/order_created_radius"
+                            android:paddingHorizontal="7dp"
+                            android:paddingVertical="3dp"
+                            android:text="Order Cancelled By Seller"
+                            android:textColor="#0073FF"
+                            android:textFontWeight="500"
+                            android:textSize="8sp" />
 
-                            <TextView
-                                android:id="@+id/status"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="4dp"
-                                android:background="@drawable/order_created_radius"
-                                android:paddingHorizontal="7dp"
-                                android:paddingVertical="3dp"
-                                android:text="Order Cancelled By Seller"
-                                android:textColor="#0073FF"
-                                android:textFontWeight="500"
-                                android:textSize="8sp" />
+                    </LinearLayout>
 
-                        </LinearLayout>
+                </LinearLayout>
 
-                        </LinearLayout>
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:paddingVertical="15dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="14dp"
-                            android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                        android:layout_marginRight="18dp">
 
-                                android:layout_marginRight="18dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="500"
+                            android:text="Order No.:"
+                            android:textColor="@color/black"
+                            android:textSize="10sp" />
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="500"
-                                    android:text="Order No.:"
-                                    android:textColor="@color/black"
-                                    android:textSize="10sp" />
-
-                                <TextView
-                                    android:id="@+id/orderNumberText"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="500"
-                                    android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="10sp" />
-
-                            </LinearLayout>
-
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="18dp">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="500"
-                                    android:text="Order Placed:"
-                                    android:textColor="@color/black"
-                                    android:textSize="10sp" />
-
-                                <TextView
-                                    android:id="@+id/date"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="500"
-                                    android:text=" "
-                                    android:textColor="@color/black"
-                                    android:textSize="10sp" />
-
-                            </LinearLayout>
-
-                            <TextView
-                                android:id="@+id/tvDownloadInvoice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="12dp"
-                                android:layout_gravity="right"
-                                android:layout_marginRight="18dp"
-                                android:text="Download Order Invoice"
-                                android:textColor="#3A5FD8"
-                                android:textFontWeight="500"
-                                android:textSize="12sp" />
-
-                        </LinearLayout>
+                        <TextView
+                            android:id="@+id/orderNumberText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="500"
+                            android:text=""
+                            android:textColor="@color/black"
+                            android:textSize="10sp" />
 
                     </LinearLayout>
 
 
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/tabCard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="21dp"
-                    android:layout_marginTop="28dp"
-                    android:layout_marginBottom="27dp"
-                    app:cardCornerRadius="10dp"
-                    android:paddingBottom="34dp"
-                    app:cardElevation="4dp">
-
-
-                    <com.google.android.material.appbar.AppBarLayout
-                        android:id="@+id/appBarLayout"
-                        android:layout_width="match_parent"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/white">
+                        android:layout_marginRight="18dp">
 
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/viewOrderTabLayout"
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:tabIndicatorColor="#3A5FD8"
-                            app:tabIndicatorHeight="1dp"
-                            app:tabTextAppearance="@style/MineCustomTabText"
-                            app:tabSelectedTextColor="#3A5FD8"
-                            app:tabTextColor="@color/black">
+                            android:layout_weight="500"
+                            android:text="Order Placed:"
+                            android:textColor="@color/black"
+                            android:textSize="10sp" />
 
+                        <TextView
+                            android:id="@+id/date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="500"
+                            android:text=" "
+                            android:textColor="@color/black"
+                            android:textSize="10sp" />
 
-                        </com.google.android.material.tabs.TabLayout>
+                    </LinearLayout>
 
-                    </com.google.android.material.appbar.AppBarLayout>
+                    <TextView
+                        android:id="@+id/tvDownloadInvoice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginRight="18dp"
+                        android:text="Download Order Invoice"
+                        android:textColor="#3A5FD8"
+                        android:textFontWeight="500"
+                        android:textSize="12sp" />
 
-                    <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/viewOrderViewPager"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
 
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/tabCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="21dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginBottom="27dp"
+            android:paddingBottom="34dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp">
+
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/viewOrderTabLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabIndicatorColor="#3A5FD8"
+                    app:tabIndicatorHeight="1dp"
+                    app:tabSelectedTextColor="#3A5FD8"
+                    app:tabTextAppearance="@style/MineCustomTabText"
+                    app:tabTextColor="@color/black">
+
+
+                </com.google.android.material.tabs.TabLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewOrderViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 
 </LinearLayout>
