--- a/app/src/main/res/layout/fragment_payment_summary.xml
+++ b/app/src/main/res/layout/fragment_payment_summary.xml
@@ -1748,6 +1748,7 @@
                                 android:textSize="16sp" />
 
                             <com.google.android.material.button.MaterialButton
+                                android:id="@+id/makePaymentBtn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="32dp"
                                 android:layout_gravity="center_horizontal"
