--- a/app/src/main/res/layout/fragment_referral.xml
+++ b/app/src/main/res/layout/fragment_referral.xml
@@ -171,6 +171,8 @@
                 app:strokeColor="@color/box_background_color">
 
                 <LinearLayout
+                    android:visibility="gone"
+                    android:id="@+id/referralCodeLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -204,6 +206,7 @@
                             android:textSize="14sp" />
 
                         <TextView
+                            android:id="@+id/submit"
                             android:layout_width="wrap_content"
                             android:layout_height="34dp"
                             android:background="@drawable/submit_button_radius"
