--- a/app/src/main/res/layout/fragment_thank_you.xml
+++ b/app/src/main/res/layout/fragment_thank_you.xml
@@ -239,6 +239,8 @@
 
 
             <com.google.android.material.card.MaterialCardView
+                android:visibility="gone"
+                android:id="@+id/oneShop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -259,6 +261,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/oneShopText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Looks like you’ve added products only from Amazon.in"
