--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -13,11 +13,14 @@
 
 
         <ImageView
-            android:padding="30dp"
+            android:scaleType="fitXY"
+            android:paddingTop="35dp"
+            android:paddingHorizontal="20dp"
+
             android:visibility="gone"
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="14dp"
             android:layout_marginVertical="34dp"
             android:src="@drawable/shopprelogo"/>
