--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -155,7 +155,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/forgetSomething"
-                    android:visibility="gone"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="21dp"
@@ -181,7 +181,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="2dp"
-                                android:layout_weight="600"
+                                android:layout_weight="800"
                                 android:lineSpacingExtra="2dp"
                                 android:text="Forgot Something?\nYour previous Personal Shopper order is still waiting for you..."
                                 android:textColor="@color/black"
@@ -228,7 +228,8 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="match_parent"
+                            >
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -237,20 +238,20 @@
                                 android:layout_marginTop="24dp"
                                 android:text="Orders"
                                 android:textColor="@color/black"
+                                android:layout_weight="1"
                                 android:textFontWeight="700"
                                 android:textSize="14sp" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginRight="17dp"
-                                android:gravity="right">
 
                                 <com.google.android.material.button.MaterialButton
                                     android:id="@+id/addNewOrderBtn"
-                                    android:layout_width="152dp"
-                                    android:layout_height="24dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="27dp"
+                                    android:layout_marginRight="17dp"
                                     android:layout_marginTop="19dp"
+                                    android:layout_marginBottom="15dp"
+                                    android:paddingHorizontal="27dp"
+                                    android:letterSpacing="0.03"
                                     android:insetTop="0dp"
                                     android:insetBottom="0dp"
                                     android:text="Add New Order"
@@ -261,7 +262,7 @@
                                     app:backgroundTint="#17B28F"
                                     app:cornerRadius="5dp" />
 
-                            </LinearLayout>
+
 
                         </LinearLayout>
 
@@ -269,7 +270,7 @@
                             android:id="@+id/orderRecyclerView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="29dp"
+                            android:layout_marginTop="14dp"
                             >
 
                         </androidx.recyclerview.widget.RecyclerView>
