--- a/app/src/main/res/layout/fragment_view_order_personal_shop.xml
+++ b/app/src/main/res/layout/fragment_view_order_personal_shop.xml
@@ -86,7 +86,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
+                        android:layout_gravity="right"
                         android:layout_marginRight="18dp">
 
                         <TextView
@@ -112,6 +112,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="right"
                         android:layout_marginRight="18dp">
 
                         <TextView
@@ -138,6 +139,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
+                        android:layout_gravity="right"
                         android:layout_marginRight="18dp"
                         android:text="Download Order Invoice"
                         android:textColor="#3A5FD8"
