--- a/app/src/main/res/layout/fragment_final_order_summary.xml
+++ b/app/src/main/res/layout/fragment_final_order_summary.xml
@@ -71,7 +71,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="34dp"
-                            android:text="₹ 5174"
+                            android:text="₹ "
                             android:textColor="@color/black"
                             android:textFontWeight="600"
                             android:textSize="12sp" />
@@ -95,7 +95,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="34dp"
-                            android:text="₹ 400"
+                            android:text="₹ "
                             android:textColor="@color/black"
                             android:textFontWeight="600"
                             android:textSize="12sp" />
@@ -125,7 +125,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="34dp"
-                            android:text="₹ 5536"
+                            android:text="₹ "
                             android:textColor="@color/black"
                             android:textFontWeight="700"
                             android:textSize="18sp" />
