--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -9,9 +9,10 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginHorizontal="17dp"
-        android:layout_marginVertical="28dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="28dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="8dp"
         android:background="@color/white">
@@ -140,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:text="@string/use_this_address_to_shop_from_india"
                 android:textColor="@color/black"
                 android:textFontWeight="700"
@@ -150,11 +151,11 @@
                 android:id="@+id/startShoppingBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="25dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
                 android:letterSpacing="0.03"
-                android:layout_marginTop="51dp"
-                android:layout_marginBottom="46dp"
+                android:layout_marginTop="40dp"
+
                 android:backgroundTint="@color/button_color"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
